[package]
name = "aqa-asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
inline_colorization = "0.1.6"
once_cell = "1.20.2"
strsim = "0.11.1"
strum = { version = "0.26.3", features = ["derive"] }
